Added file uploading and Handling

--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -439,14 +439,23 @@
                             <div
                               class="controllers mb-2 p-2 bg-light text-center rounded-2"
                             >
-                              <button class="btn btn-info">
+                              <button class="btn btn-info" title="Go Back">
                                 <span class="fa fa-arrow-left"></span>
                               </button>
-                              <button class="btn btn-danger ms-2">
+                              <button
+                                class="btn btn-success ms-2"
+                                title="Upload Badges"
+                              >
+                                <span class="fa fa-plus"></span>
+                              </button>
+                              <button
+                                class="btn btn-danger ms-2"
+                                title="Delete Folder"
+                              >
                                 <span class="fa fa-trash"></span>
                               </button>
                             </div>
-                            <div class="file-container"></div>
+                            <div class="file-container row"></div>
                           </div>
                         </div>
                       </div>
