--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -157,6 +157,24 @@
                         id="missionname"
                       />
                     </div>
+                    <div class="form-check form-switch text-start">
+                      <input
+                        class="form-check-input"
+                        type="checkbox"
+                        id="badgeUrlToggle"
+                        name="useBadges"
+                        value="yes"
+                      />
+                      <label class="form-check-label" for="mySwitch"
+                        >Use Badges instead of Redirect?</label
+                      >
+                    </div>
+                    <div
+                      class="badgePreview p-3 bg-light my-2 text-center"
+                      style="display: none"
+                    >
+                      <img src="" alt="Badge" width="100px" />
+                    </div>
                     <div class="form-group mb-2">
                       <input
                         placeholder="Redirect URL"
@@ -166,6 +184,7 @@
                         id="missionurl"
                       />
                     </div>
+                    <hr />
                     <% if (icons) { %>
                     <p class="m-0">Select Image</p>
                     <div class="mission-icons row">
@@ -454,6 +473,25 @@
                               >
                                 <span class="fa fa-trash"></span>
                               </button>
+                            </div>
+                            <div
+                              class="file-description row my-2"
+                              style="display: none"
+                            >
+                              <div class="col-9">
+                                <input
+                                  id="file-description"
+                                  class="form-control"
+                                  placeholder="Description"
+                                />
+                              </div>
+                              <div class="col-3">
+                                <button
+                                  class="btn w-100 btn-success saveFileDescription"
+                                >
+                                  Save
+                                </button>
+                              </div>
                             </div>
                             <div class="file-container row"></div>
                           </div>
