--- a/views/pages/profile.ejs
+++ b/views/pages/profile.ejs
@@ -131,6 +131,13 @@
               <% } %> <% if (user.role.current=="admin") { %>
               <a href="/admin" class="btn btn-success ms-2">Admin</a>
               <% } %>
+              <button
+                class="ms-2 btn btn-info badge-info"
+                data-bs-toggle="modal"
+                data-bs-target="#bsModal"
+              >
+                Badges
+              </button>
             </div>
             <hr />
             <div class="captured-images">
@@ -157,9 +164,71 @@
     <div class="bottomfixedbuttons">
       <a href="/logout" class="vj-logout">Logout</a>
     </div>
+    <div
+      class="modal fade"
+      id="bsModal"
+      tabindex="-1"
+      aria-labelledby="bsModal"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5 text-center" id="bsModalTitle">
+              Badge Collection
+            </h1>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <% if (userBadgeDetails && userBadgeDetails.length > 0) { %>
+            <table class="table">
+              <tbody>
+                <% userBadgeDetails.forEach(badge => { %>
+                <tr>
+                  <td>
+                    <img src="<%= badge.badge %>" width="100px" />
+                  </td>
+                  <td><%= badge.description %></td>
+                </tr>
+                <% }); %>
+              </tbody>
+            </table>
+            <% } else { %>
+            <div class="alert alert-danger">
+              No Badges found in your Profile!
+            </div>
+            <% } %>
+
+            <div class="mt-2 text-center">
+              <button
+                type="button"
+                class="btn btn-danger"
+                data-bs-dismiss="modal"
+                aria-label="Close"
+              >
+                Close
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
     <script>
       $(document).ready(() => {
+        $("form.profile").submit(() => {
+          return false;
+        });
         $.post("/api/buttons", { name: "learn_more_btn" }, (data) => {
           $(".user-navbar").fadeIn();
           if (data) {
