--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -218,6 +218,88 @@
                   </div>
                 </div>
               </div>
+              <div class="col-12 my-2">
+                <div class="card">
+                  <div class="card-header">
+                    <h3 class="text-center m-0">Badge Manager</h3>
+                  </div>
+                  <div class="card-body bg-light">
+                    <div class="fileManagerBody">
+                      <div class="loader text-center p-5">
+                        <span class="fa fa-spinner fa-spin fa-3x"></span>
+                      </div>
+                      <div class="dirs" style="display: none">
+                        <form class="new-dir m-0 p-0">
+                          <div class="row">
+                            <div class="col-9">
+                              <input
+                                type="text"
+                                required
+                                id="dirName"
+                                placeholder="Enter Folder Name"
+                                class="form-control"
+                              />
+                            </div>
+                            <div class="col-3">
+                              <button class="btn btn-success w-100">
+                                Create New
+                              </button>
+                            </div>
+                          </div>
+                        </form>
+                        <hr />
+                        <div class="dir-container bg-white my-2 p-3 rounded-2">
+                          <div class="row"></div>
+                        </div>
+                      </div>
+                      <div
+                        class="files px-2 py-3 bg-white rounded-2"
+                        style="display: none"
+                      >
+                        <div
+                          class="controllers mb-2 p-2 bg-light text-center rounded-2"
+                        >
+                          <button class="btn btn-info" title="Go Back">
+                            <span class="fa fa-arrow-left"></span>
+                          </button>
+                          <button
+                            class="btn btn-success ms-2"
+                            title="Upload Badges"
+                          >
+                            <span class="fa fa-plus"></span>
+                          </button>
+                          <button
+                            class="btn btn-danger ms-2"
+                            title="Delete Folder"
+                          >
+                            <span class="fa fa-trash"></span>
+                          </button>
+                        </div>
+                        <div
+                          class="file-description row my-2"
+                          style="display: none"
+                        >
+                          <div class="col-9">
+                            <input
+                              id="file-description"
+                              class="form-control"
+                              placeholder="Description"
+                            />
+                          </div>
+                          <div class="col-3">
+                            <button
+                              class="btn w-100 btn-success saveFileDescription"
+                            >
+                              Save
+                            </button>
+                          </div>
+                        </div>
+                        <div class="file-container row"></div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
               <table class="table table-striped">
                 <thead>
                   <th>Name</th>
@@ -412,90 +494,6 @@
                           </thead>
                           <tbody class="customButtonList"></tbody>
                         </table>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-12 my-2">
-                    <div class="card">
-                      <div class="card-header">
-                        <h3 class="text-center m-0">Badge Manager</h3>
-                      </div>
-                      <div class="card-body bg-light">
-                        <div class="fileManagerBody">
-                          <div class="loader text-center p-5">
-                            <span class="fa fa-spinner fa-spin fa-3x"></span>
-                          </div>
-                          <div class="dirs" style="display: none">
-                            <form class="new-dir m-0 p-0">
-                              <div class="row">
-                                <div class="col-9">
-                                  <input
-                                    type="text"
-                                    required
-                                    id="dirName"
-                                    placeholder="Enter Folder Name"
-                                    class="form-control"
-                                  />
-                                </div>
-                                <div class="col-3">
-                                  <button class="btn btn-success w-100">
-                                    Create New
-                                  </button>
-                                </div>
-                              </div>
-                            </form>
-                            <hr />
-                            <div
-                              class="dir-container bg-white my-2 p-3 rounded-2"
-                            >
-                              <div class="row"></div>
-                            </div>
-                          </div>
-                          <div
-                            class="files px-2 py-3 bg-white rounded-2"
-                            style="display: none"
-                          >
-                            <div
-                              class="controllers mb-2 p-2 bg-light text-center rounded-2"
-                            >
-                              <button class="btn btn-info" title="Go Back">
-                                <span class="fa fa-arrow-left"></span>
-                              </button>
-                              <button
-                                class="btn btn-success ms-2"
-                                title="Upload Badges"
-                              >
-                                <span class="fa fa-plus"></span>
-                              </button>
-                              <button
-                                class="btn btn-danger ms-2"
-                                title="Delete Folder"
-                              >
-                                <span class="fa fa-trash"></span>
-                              </button>
-                            </div>
-                            <div
-                              class="file-description row my-2"
-                              style="display: none"
-                            >
-                              <div class="col-9">
-                                <input
-                                  id="file-description"
-                                  class="form-control"
-                                  placeholder="Description"
-                                />
-                              </div>
-                              <div class="col-3">
-                                <button
-                                  class="btn w-100 btn-success saveFileDescription"
-                                >
-                                  Save
-                                </button>
-                              </div>
-                            </div>
-                            <div class="file-container row"></div>
-                          </div>
-                        </div>
                       </div>
                     </div>
                   </div>
