--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -20,8 +20,8 @@
   </head>
   <body style="margin: 0">
     <div class="fullscreen-toggle">
-      <div class="fullscreen">
-        <img width="30px" src="/images/fullscreen.svg" id="fullscreenicon" />
+      <div class="fullscreen p-2 bg-primary text-white">
+        <span>Enter Full Screen Experience</span>
       </div>
     </div>
     <div id="map" style="height: 100vh; width: 100vw"></div>
