--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -88,7 +88,7 @@
                 <div class="col-md-7 text-center">
                   <div class="h-100 d-flex align-items-center">
                     <p class="alert alert-warning w-100" id="captureMessage">
-                      Congrats, You have Captured the Image!
+                      Captured Successfully into Profile Collections!
                     </p>
                   </div>
                 </div>
