--- a/public/css/style.css
+++ b/public/css/style.css
@@ -277,3 +277,27 @@ img {
 .fullscreen-toggle:hover {
   border: 2px solid blue;
 }
+
+.howtoplaycontainer {
+  position: fixed;
+  z-index: 9;
+  width: 100%;
+  bottom: 50px;
+  text-align: center;
+}
+
+.howtoplaycontainer a {
+  background: #6868ff;
+  color: white;
+  text-decoration: none;
+  padding: 5px 10px;
+  display: inline-block;
+  min-width: 40%;
+  border: 2px solid blue;
+  border-radius: 5px;
+  transition: 0.1s;
+}
+
+.howtoplaycontainer a:hover {
+  background: blue;
+}
