--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -21,7 +21,7 @@
   <body style="margin: 0">
     <div class="fullscreen-toggle">
       <div class="fullscreen p-2 bg-primary text-white">
-        <span>Fullscreen</span>
+        <span>Full Screen</span>
       </div>
     </div>
     <div id="map" style="height: 100vh; width: 100vw"></div>
