--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -425,6 +425,23 @@
                               </button>
                             </div>
                           </div>
+                          <div class="col-9 mt-3">
+                            <input
+                              type="number"
+                              id="userMapMarkerSize"
+                              placeholder="User Marker Size (1-10)"
+                              class="form-control"
+                              min="1"
+                              max="10"
+                            />
+                          </div>
+                          <div class="col-3 mt-3">
+                            <button
+                              class="btn btn-warning w-100 userMapMarkerSizeBtn"
+                            >
+                              Update
+                            </button>
+                          </div>
                         </div>
                       </div>
                     </div>
