--- a/public/css/style.css
+++ b/public/css/style.css
@@ -247,8 +247,13 @@ body {
   transition: 0.2s;
 }
 
-.currentLocationBtn img {
-  width: 30px;
+.currentLocationBtn span {
+  width: 40px;
+  height: 40px;
+  font-size: 30px;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .currentLocationBtn:hover {
@@ -298,4 +303,25 @@ img {
 
 .howtoplaycontainer a:hover {
   background: blue;
+}
+
+.refresh {
+  top: 60px;
+  left: 15px;
+  padding: 5px;
+  background: white;
+  height: 40px;
+  width: 40px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  border: 2px solid;
+  cursor: pointer;
+  transition: 0.1s;
+}
+
+.refresh:hover {
+  background: black;
+  color: red;
 }
