--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -17,11 +17,20 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
     />
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
   </head>
   <body style="margin: 0">
     <div class="fullscreen-toggle">
       <div class="fullscreen p-2 bg-primary text-white">
         <span>Full Screen</span>
+      </div>
+    </div>
+    <div class="refresh fixed-top">
+      <div class="refresh-btn">
+        <span class="fa fa-refresh"></span>
       </div>
     </div>
     <div id="map" style="height: 100vh; width: 100vw"></div>
@@ -210,7 +219,7 @@
       </div>
     </div>
     <div class="currentLocationBtn" onclick="getCurrentLocation()">
-      <img src="/images/aim.svg" class="image" />
+      <span class="fa fa-crosshairs"></span>
     </div>
     <script>
       let missions=<%- JSON.stringify(missions) %>;
