Admin to Update text

--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -435,9 +435,63 @@
                               max="10"
                             />
                           </div>
-                          <div class="col-3 mt-3">
+                          <div class="col-3 my-3">
                             <button
                               class="btn btn-warning w-100 userMapMarkerSizeBtn"
+                            >
+                              Update
+                            </button>
+                          </div>
+                          <hr />
+                          <div class="col-12">
+                            <p>Congrats Text</p>
+                          </div>
+                          <div class="col-9">
+                            <textarea
+                              class="form-control"
+                              id="congratsText"
+                              rows="3"
+                            ></textarea>
+                          </div>
+                          <div class="col-3">
+                            <button
+                              class="btn btn-warning mt-auto updateBtntrigger"
+                              data-id="congratsText"
+                            >
+                              Update
+                            </button>
+                          </div>
+                          <div class="col-12 mt-3">
+                            <p>Capture Button Text</p>
+                          </div>
+                          <div class="col-9">
+                            <input
+                              class="form-control"
+                              id="captureBtnTextInput"
+                            />
+                          </div>
+                          <div class="col-3">
+                            <button
+                              class="btn btn-warning mt-auto updateBtntrigger"
+                              data-id="captureBtnTextInput"
+                            >
+                              Update
+                            </button>
+                          </div>
+                          <div class="col-12 mt-3">
+                            <p>Login Description</p>
+                          </div>
+                          <div class="col-9">
+                            <textarea
+                              class="form-control"
+                              id="loginTextInput"
+                              rows="3"
+                            ></textarea>
+                          </div>
+                          <div class="col-3">
+                            <button
+                              class="btn btn-warning mt-auto updateBtntrigger"
+                              data-id="loginTextInput"
                             >
                               Update
                             </button>
