Modified Class to Select single element

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -177,7 +177,7 @@
               loading="lazy"
               width="100%"
             />
-            <p class="alert alert-info" style="text-transform: capitalize">
+            <p class="alert alert-info mText" style="text-transform: capitalize">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas
               nesciunt mollitia quae, tempore sed neque eveniet numquam veniam
               architecto et eius aperiam ducimus. Ducimus, quibusdam
@@ -194,7 +194,7 @@
                   Capture
                 </button>
                 <%}else{%>
-                <button class="btn w-100 btn-secondary" disabled>
+                <button class="btn w-100 btn-secondary" disabled id="captureBtnTextInput">
                   Capture
                 </button>
                 <%}%>
