Import Export advanced

--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -245,6 +245,19 @@
                                 Create New
                               </button>
                             </div>
+                            <div class="col-12">
+                              <div class="mt-4 text-center">
+                                <a
+                                  class="btn btn-success"
+                                  href="/admin/export/badges"
+                                >
+                                  <span class="fa fa-upload"></span> Export
+                                </a>
+                                <a class="btn btn-primary importBadgeBTN">
+                                  <span class="fa fa-download"></span> Import
+                                </a>
+                              </div>
+                            </div>
                           </div>
                         </form>
                         <hr />
@@ -510,7 +523,9 @@
                         <a href="/admin/export/images" class="btn btn-success"
                           >Export</a
                         >
-                        <button class="btn btn-info importBTN">Import</button>
+                        <button class="btn btn-info importImageBTN">
+                          Import
+                        </button>
                       </div>
                     </div>
                   </div>
