--- a/public/css/style.css
+++ b/public/css/style.css
@@ -307,7 +307,7 @@ img {
 
 .refresh {
   top: 60px !important;
-  left: 15px !important;
+  right: 15px !important;
   padding: 5px;
   background: white;
   height: 40px;
