--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -28,9 +28,11 @@
         <span>Full Screen</span>
       </div>
     </div>
-    <div class="refresh fixed-top">
-      <div class="refresh-btn">
-        <span class="fa fa-refresh"></span>
+    <div class="text-end fixed-top">
+      <div class="refresh" style="position: fixed">
+        <div class="refresh-btn">
+          <span class="fa fa-refresh"></span>
+        </div>
       </div>
     </div>
     <div id="map" style="height: 100vh; width: 100vw"></div>
