--- a/views/pages/profile.ejs
+++ b/views/pages/profile.ejs
@@ -14,6 +14,9 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
     />
     <style>
+      ::-webkit-scrollbar{
+        display: none;
+      }
       body {
         background: url(/images/green_bg.jpeg);
         background-size: cover;
@@ -73,6 +76,11 @@
       .bottomfixedbuttons a:hover {
         background: #f80;
         border: 2px dashed;
+      }
+
+      .captured-images{
+        max-height: 50vh;
+        overflow-y: scroll;
       }
 
       @keyframes circularShadow {
