--- a/public/css/style.css
+++ b/public/css/style.css
@@ -325,3 +325,32 @@ img {
   background: black;
   color: red;
 }
+
+.popup-button {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  background: #ffffff;
+  padding: 10px;
+  text-align: center;
+}
+
+.popup-button button {
+  border: 2px solid black;
+  background: red;
+  color: white;
+  padding: 5px 20px;
+  border-radius: 10px 0 10px 0;
+  font-size: 1.5rem;
+  font-weight: 700;
+  box-shadow: 5px 5px 4px #00000061;
+  transition: 0.1s;
+}
+
+.popup-button button:hover {
+  box-shadow: 0 0 0 0 #00000061;
+  background: yellow;
+  border: 2px solid red;
+  color: black;
+  border-radius: 0 10px 0px 10px;
+}
