--- a/public/css/style.css
+++ b/public/css/style.css
@@ -186,6 +186,18 @@
   margin: 10px 0;
 }
 
+@media screen and (min-width: 500px) {
+  .mission-container .user-image-pick .image-line {
+    width: 50%;
+  }
+
+  .mission-container .user-image-pick {
+    display: flex;
+  }
+}
+
+.mission-container .user-image-pick .image-line {
+}
 .mission-container .user-image-pick .image-line .mission-image {
   width: 50%;
   max-height: 100px;
