--- a/views/pages/profile.ejs
+++ b/views/pages/profile.ejs
@@ -14,7 +14,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
     />
     <style>
-      ::-webkit-scrollbar{
+      ::-webkit-scrollbar {
         display: none;
       }
       body {
@@ -78,7 +78,7 @@
         border: 2px dashed;
       }
 
-      .captured-images{
+      .captured-images {
         max-height: 50vh;
         overflow-y: scroll;
       }
@@ -153,7 +153,7 @@
               <div class="image-container row justify-content-center">
                 <% user.capturedImages.forEach(image => { %> <%
                 image.images.forEach(img=>{%>
-                <div class="image-unit col-6 col-sm-4 col-lg-3">
+                <div class="image-unit col-3">
                   <img src="/static/image/<%= img %>" width="100%" />
                 </div>
                 <%}) %> <% }) %>
