--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -135,7 +135,7 @@
                 class="backFromInterface btn btn-primary mt-2"
                 >←</a
               >
-              <div class="user-image-pick"></div>
+              <div class="user-image-pick row"></div>
               <div class="text-center placeholder-div-redeem">
                 <p class="text-danger mt-3">
                   The Redeem button Activates after matching
