Open Details Icon Eye

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -231,7 +231,7 @@
       <span class="fa fa-crosshairs"></span>
     </div>
     <div class="popup-button" style="display: none">
-      <button>Open Details</button>
+      <button><span class="fa fa-eye fa-3x"></span></button>
     </div>
     <script>
       let missions=<%- JSON.stringify(missions) %>;
