--- a/views/pages/privacy_policy.ejs
+++ b/views/pages/privacy_policy.ejs
@@ -160,7 +160,7 @@
       </p>
 
       <div class="my-5">
-        <a href="/">Go back to the homepage</a>
+        <a href="/auth#register">Go back to the Registration</a>
       </div>
     </div>
     <style>
