--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -214,7 +214,7 @@
             const countries = data.countries;
             $("#citySelector").empty();
             $("#citySelector").html(
-              "<option value=''>Select Countries</option>"
+              "<option value=''>Select State/Province</option>"
             );
 
             countries.forEach((country) => {
