Badge Delete Repair

--- a/views/pages/profile.ejs
+++ b/views/pages/profile.ejs
@@ -98,6 +98,16 @@
           box-shadow: -2px 2px 20px 5px green;
         }
       }
+
+      tr.unit-badge {
+        cursor: pointer;
+        border: 2px solid transparent;
+        transition: 0.1s;
+      }
+
+      tr.unit-badge:hover {
+        border-color: red;
+      }
     </style>
   </head>
   <body>
