--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -23,6 +23,53 @@
     />
   </head>
   <body style="margin: 0">
+    <input type="hidden" value="<%=timeFuture%>" id="countdownTimec" />
+    <%if(timeFuture>=0){%>
+    <div
+      class="countdown-holder fixed-top bg-white w-100 vh-100"
+      style="z-index: 1"
+    >
+      <div
+        class="d-inline-flex justify-content-center align-items-center w-100 vh-100"
+      >
+        <div class="col-10 col-sm-8 col-md-6 col-lg-4">
+          <div class="card rounded-0">
+            <div
+              class="card-header rounded-0"
+              style="background: #9900b3; color: white"
+            >
+              <h3 class="m-0 text-center">Live Soon!</h3>
+            </div>
+            <div class="card-body">
+              <div class="row countdown text-center">
+                <div class="col-4 p-0">
+                  <span class="timec hour">00</span>
+                </div>
+                <div class="col-4 p-0">
+                  <span class="timec minute">00</span>
+                </div>
+                <div class="col-4 p-0">
+                  <span class="timec second">00</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <style>
+      .countdown {
+        font-size: 3rem;
+        font-weight: 500;
+      }
+
+      .countdown .timec {
+        background: linear-gradient(0, #6900ab6b, transparent, #6d00ff6b);
+        display: block;
+        margin: 1px;
+      }
+    </style>
+    <%}%>
     <div class="fullscreen-toggle">
       <div class="fullscreen p-2 bg-primary text-white">
         <span>Full Screen</span>
