--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -44,7 +44,7 @@
                 color: white;
               "
             >
-              <h3 class="m-0 text-center">Live Soon!</h3>
+              <h3 class="m-0 text-center">The event begins in</h3>
             </div>
             <div class="card-body" style="display: transparent">
               <div class="row countdown text-center">
