Showing Radius front end

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -24,6 +24,7 @@
   </head>
   <body style="margin: 0">
     <input type="hidden" value="<%=timeFuture%>" id="countdownTimec" />
+    <input type="hidden" value="<%=user.radius%>" id="userLocationRadius" />
     <%if(timeFuture>=0){%>
     <div
       class="countdown-holder fixed-top bg-white w-100 vh-100"
