--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -24,8 +24,9 @@
   </head>
   <body style="margin: 0">
     <input type="hidden" value="<%=timeFuture%>" id="countdownTimec" />
+    <%if(user && user.radius){%>
     <input type="hidden" value="<%=user.radius%>" id="userLocationRadius" />
-    <%if(timeFuture>=0){%>
+    <%}%> <%if(timeFuture>=0){%>
     <div
       class="countdown-holder fixed-top bg-white w-100 vh-100"
       style="z-index: 1"
