--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -79,6 +79,7 @@
                       <th>Name</th>
                       <th>Email</th>
                       <th>Province</th>
+                      <th>Radius</th>
                       <th>Since</th>
                       <th>Actions</th>
                     </tr>
@@ -91,6 +92,7 @@
                       <td><%= user.name %></td>
                       <td><%= user.email %></td>
                       <td><%= user.state %></td>
+                      <td id="radiusVisual"><%= user.radius %></td>
                       <td>
                         <%= new Date(user.createdAt).toLocaleDateString('en-US')
                         %>
