--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -143,6 +143,9 @@
                     </div>
                   </form>
                 </div>
+                <div class="visibility-toggle">
+                  <span class="fa fa-arrow-up"></span>
+                </div>
               </div>
               <div class="map-container">
                 <div class="g-map vh-100"></div>
