--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -1,238 +1,148 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
+    <title>Login</title>
+    <style>
+      body {
+        overflow: hidden;
+      }
+
+      .login-box {
+        background: linear-gradient(45deg, #ffffff26, #b5b5b569, #ffffff30);
+        padding: 20px;
+        backdrop-filter: blur(5px);
+        border-radius: 5px;
+        border: 2px solid white;
+      }
+
+      .login-box .classic-login {
+        padding: 5px;
+        margin: 10px 0;
+        padding-bottom: 15px;
+        border-bottom: 2px solid #ffffff2e;
+      }
+
+      .login-box .classic-login input.c-input {
+        display: inline-block;
+        width: 100%;
+        margin: 5px 0;
+        padding: 5px 10px;
+        border: 0;
+        outline: 0;
+        color: #ffffffb3;
+        background: #ffffff1c;
+        border-bottom: 2px solid grey;
+        transition: 0.1s;
+        font-family: sans-serif;
+        letter-spacing: 3px;
+      }
+
+      .login-box .classic-login input.c-input:focus {
+        border-bottom: 2px solid white;
+        color: white;
+      }
+
+      .login-box h3 {
+        text-align: center;
+        color: white;
+        padding-bottom: 20px;
+        border-bottom: 1px solid #ffffff4a;
+        font-size: 2rem;
+      }
+
+      .login-box .classic-login input.c-input::placeholder {
+        color: #ffffff8f;
+      }
+    </style>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
-      name="google-signin-client_id"
-      content="YOUR_CLIENT_ID.apps.googleusercontent.com"
+      name="viewport"
+      content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no"
     />
 
-    <title>Login</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
     />
-    <style>
-      body {
-        background: url(/images/green_bg.jpeg);
-        background-size: cover;
-        background-position: center;
-      }
-
-      .form-control_v {
-        background-color: #ffffff66;
-        width: 100%;
-        border: 0;
-        outline: 0;
-        padding: 5px 20px;
-        border: 1px solid lightgrey;
-      }
-
-      .form-container form {
-        background: #ffffff52 !important;
-        backdrop-filter: blur(5px);
-        border: 1px solid #d3d3d363;
-        animation: 3s circularShadow infinite;
-      }
-
-      @keyframes circularShadow {
-        0%,
-        100% {
-          box-shadow: 2px 2px 20px 5px green;
-        }
-        25% {
-          box-shadow: 2px -2px 20px 5px green;
-        }
-        50% {
-          box-shadow: -2px -2px 20px 5px green;
-        }
-        75% {
-          box-shadow: -2px 2px 20px 5px green;
-        }
-      }
-    </style>
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
   </head>
   <body>
-    <div class="body-container">
-      <div class="d-flex justify-content-center align-items-center vh-100">
-        <div class="form-container col-lg-4 col-md-6 col-12 col-sm-8">
-          <form
-            action="/auth"
-            method="POST"
-            class="py-2 container login rounded-2"
+    <div class="h-100 bg-dark">
+      <div class="row justify-content-center m-0 p-0">
+        <div class="col-11 col-sm-10 col-md-8 col-lg-6 col-xl-4">
+          <div
+            class="vh-100 d-inline-flex align-items-center animate__animated animate__backInDown"
           >
-            <h1
-              class="m-0 text-center"
-              style="
-                color: transparent;
-                -webkit-text-stroke: 1px #19873d;
-                text-transform: uppercase;
-                text-shadow: 2px 2px 10px #19873d;
-              "
-            >
-              Login
-            </h1>
-            <hr />
-            <% if (locals.error) { %>
-            <div class="text-danger pb-2 text-center"><%= error %></div>
-            <% } %>
-            <div class="form-components">
-              <div class="form-group mb-2">
-                <input
-                  required
-                  type="email"
-                  name="email"
-                  placeholder="user@gmail.com"
-                  class="form-control_v"
-                />
-              </div>
-              <div class="form-group mb-2">
-                <input
-                  required
-                  type="password"
-                  name="password"
-                  placeholder="******"
-                  class="form-control_v"
-                />
-              </div>
-              <button class="btn btn-success w-100">SUBMIT</button>
-            </div>
-            <p class="m-0 mt-2">
-              New User? <a href="javascript:toggleForm()">Register</a>
-            </p>
-          </form>
-          <form
-            action="/auth/new"
-            method="POST"
-            class="py-2 container register rounded-2"
-            style="display: none"
-          >
-            <h1
-              class="m-0 text-center"
-              style="
-                color: transparent;
-                -webkit-text-stroke: 1px #19873d;
-                text-transform: uppercase;
-                text-shadow: 2px 2px 10px #19873d;
-              "
-            >
-              Register
-            </h1>
-            <hr />
-            <div class="form-components">
-              <div class="form-group mb-2">
-                <input
-                  required
-                  type="text"
-                  name="name"
-                  placeholder="John Doe"
-                  class="form-control_v"
-                />
-              </div>
-              <div class="form-group mb-2">
-                <input
-                  required
-                  type="email"
-                  name="email"
-                  placeholder="user@gmail.com"
-                  class="form-control_v"
-                />
-              </div>
-              <div class="form-group mb-2">
-                <input
-                  required
-                  type="password"
-                  name="password"
-                  placeholder="******"
-                  class="form-control_v"
-                />
-              </div>
-              <div class="form-group mb-2">
-                <select class="form-control_v" id="citySelector" name="state">
-                  <option value="">Choose State--</option>
-                </select>
-              </div>
-              <div class="form-group mb-2 d-flex align-items-center">
-                <input
-                  type="checkbox"
-                  class="form-check"
-                  required
-                  name="ppolicy"
-                  id="ppolicyCheck"
-                />
-                <label class="form-check-label ms-2">
-                  I accept the
-                  <a href="/privacy-policy" target="_blank">Privacy Policy</a>
-                </label>
-              </div>
-
-              <button
-                class="btn btn-success w-100"
-                id="registerBtn"
-                style="display: none"
+            <div class="login-box w-100">
+              <h3>Login</h3>
+              <form
+                method="POST"
+                action="/auth"
+                class="classic-login animate__animated animate__bounce animate__delay-1s"
               >
-                SUBMIT
-              </button>
+                <input
+                  required
+                  type="email"
+                  name="email"
+                  placeholder="user@gmail.com"
+                  class="c-input animate__animated animate__backInRight animate__delay-1s"
+                />
+                <input
+                  required
+                  type="password"
+                  name="password"
+                  placeholder="******"
+                  class="c-input animate__animated animate__backInLeft animate__delay-1s"
+                />
+                <button
+                  class="btn btn-secondary w-100 mt-2 animate__animated animate__backInUp animate__delay-1s"
+                >
+                  SUBMIT
+                </button>
+              </form>
+              <div class="login-responses">
+                <% if(locals.error){ %>
+                <div class="alert alert-danger text-center">
+                  <p class="m-0"><%=error%></p>
+                </div>
+                <%}%>
+              </div>
+              <div class="plugin-login">
+                <div
+                  class="login-card google-login animate__animated animate__backInRight animate__delay-1s"
+                >
+                  <div class="g_id_signin" data-type="standard"></div>
+                </div>
+              </div>
             </div>
-            <p class="m-0 mt-2">
-              Already Have an account?
-              <a href="javascript:toggleForm()">Login</a>
-            </p>
-          </form>
+          </div>
         </div>
       </div>
     </div>
+    <div
+      id="g_id_onload"
+      data-client_id="<%=GoogleClientID%>"
+      data-callback="handleCredentialResponse"
+    ></div>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script>
-      let isLoginITF = 1;
-      function toggleForm() {
-        if (isLoginITF) {
-          isLoginITF = 0;
-          $("form.register").fadeIn();
-          $("form.login").hide();
-        } else {
-          isLoginITF = 1;
-          $("form.login").fadeIn();
-          $("form.register").hide();
-        }
-      }
-      $(document).ready(() => {
-        document
-          .getElementById("ppolicyCheck")
-          .addEventListener("change", function () {
-            if (!this.checked) return $("#registerBtn").hide();
-            if (!$("#citySelector").val()) return;
-            return $("#registerBtn").show();
-          });
-
-        if (window.location.hash == "#register") {
-          toggleForm();
-        }
-        $.get("/auth/countries", (data) => {
+      const pluginLogin = (provider, token) => {
+        let payload = {};
+        payload.type = provider;
+        payload.token = token;
+        $.post("/auth/plugins", payload, (data) => {
           if (data.status == "success") {
-            const countries = data.countries;
-            $("#citySelector").empty();
-            $("#citySelector").html(
-              "<option value=''>Select State/Province</option>"
-            );
-
-            countries.forEach((country) => {
-              $("#citySelector").append(
-                `<option value="${country.name}">${country.name}</option>`
-              );
-            });
-
-            $("#citySelector").on("change", (event) => {
-              if (!event.target.value) return $("#registerBtn").hide();
-              x = $("#ppolicyCheck")[0];
-              if (!x.checked) return;
-              return $("#registerBtn").show();
-            });
+            window.location.href = `/auth/verifyPlugin?token=${data.token}`;
           }
         });
-      });
+      };
+      function handleCredentialResponse(response) {
+        const token = response.credential;
+        pluginLogin("google", token);
+      }
     </script>
-    <script src="https://apis.google.com/js/platform.js" async defer></script>
   </body>
 </html>
