--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -4,6 +4,8 @@
     <style>
       body {
         overflow: hidden;
+        background: url(/images/login-bg.avif);
+        background-size: cover;
       }
 
       .overflow-ellipsis {
@@ -13,7 +15,7 @@
       }
 
       .login-box {
-        background: linear-gradient(45deg, #ffffff26, #b5b5b569, #ffffff30);
+        background: linear-gradient(45deg, #000000a1, #000000a1, #6daeffa1);
         padding: 20px;
         backdrop-filter: blur(5px);
         border-radius: 5px;
@@ -76,7 +78,7 @@
     <script src="https://accounts.google.com/gsi/client" async defer></script>
   </head>
   <body>
-    <div class="h-100 bg-dark">
+    <div class="h-100">
       <div class="row justify-content-center m-0 p-0">
         <div class="col-11 col-sm-10 col-md-8 col-lg-6 col-xl-4">
           <div
