Git Client Sending All  Over

--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -181,7 +181,7 @@
       }
       $(document).ready(() => {
         $(".git_id_signin").click(() => {
-          const url = `https://github.com/login/oauth/authorize?client_id=Ov23limGU0MJl6J4PCBo&scope=user:email`;
+          const url = `https://github.com/login/oauth/authorize?client_id=GitClientID&scope=user:email`;
           window.location.href = url;
         });
       });
